--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,5 +64,10 @@
     <string name="edit_task">Editando Tarefa</string>
     <string name="edit">EDITAR</string>
     <string name="select_status">Selecione o status da tarefa</string>
+    <string name="person">Pessoal</string>
+    <string name="others">Outros</string>
+    <string name="work">Trabalho</string>
+    <string name="finances">Finanças</string>
+    <string name="category_task">Categoria da tarefa</string>
 
 </resources>
